[gd_scene load_steps=3 format=3 uid="uid://du4x7ng6ntuk4"]

[ext_resource type="Script" path="res://addons/guide/editor/action_slot/action_slot.gd" id="1_w5nxd"]
[ext_resource type="Script" path="res://addons/guide/editor/action_slot/action_slot_line_edit.gd" id="2_ram7b"]

[node name="ActionSlot" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_w5nxd")

[node name="TypeIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Name"
editable = false
selecting_enabled = false
script = ExtResource("2_ram7b")

[connection signal="action_dropped" from="LineEdit" to="." method="_on_line_edit_action_dropped"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_line_edit_focus_entered"]
